...
    return 'Profile'
  }
  if (screen === 'settings') {
    return 'Settings'
  }
  if (screen === 'roundSetup') {
    return 'Round Config'
  }
  if (screen === 'holePlay') {
    return 'Hole Setup'
  }
  if (screen === 'holeResults') {
    return 'Hole Results'
  }
  if (screen === 'leaderboard') {
    return 'Hole Recap'
  }
  return 'Home'
}
...
